--- a/index.html
+++ b/index.html
@@ -17,14 +17,5 @@
     </style>
 </head>
 <html><body>
-<p class="name">软工212 17号 潘福浓</p>
-   选择查询条件:
-    <br><select name="ch">
-    <option value="1">按编号
-    <option value="2">按书名
-    <option value="3">按作者
-    <option value="4">查看全部
-        <input type="text" name="str"><br>
-        <input type="submit" name="确定">
-</form>
+<p class="name">潘福浓❤️毛帅全世界🌍都知道</p>
 </body></html>
